--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "webpack" : "webpack --watch"
+    "webpack": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -25,9 +25,11 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
     "webpack": "^3.2.0"
